redes/telnetref-template-3.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Plantilla de CloudFormation para crear una instancia EC2

Parameters:
  ImageId:
    Description: ID de la imagen AMI para la instancia EC2
    Type: String
    Default: ami-0e2c8caa4b6378d8c
    AllowedValues:
      - ami-0e2c8caa4b6378d8c
      - ami-0b0a60c0fa736354e
      - ami-0d0a90c0tf567657d

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 11.0.0.0/20
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC_Manel
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 11.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: Subnet

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref ImageId
      KeyName: vockey
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: MyEC2Instance2

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Seguridad para la instancia EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 23
          ToPort: 23
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 8.8.8.8/0

Outputs:
  InstancePublicIP:
    Description: Dirección IP pública de la instancia EC2
    Value: !GetAtt EC2Instance.PublicIp
